name:                yesod-http-signature
version:             0.1
synopsis:            Cryptographic request verification for Yesod web apps
description:
  HTTP request signature verification for Yesod web apps, providing origin
  authentication, message integrity and replay resistance.
homepage:            https://dev.angeley.es/s/fr33domlover/p/vervis
bug-reports:         https://dev.angeley.es/s/fr33domlover/p/vervis/t
license:             PublicDomain
license-file:        COPYING
author:              fr33domlover
maintainer:          fr33domlover@riseup.net
copyright:           ♡ Copying is an act of love. Please copy, reuse and share.
category:            Network, Web, Cryptography
build-type:          Simple
extra-source-files:  AUTHORS.md
                     CHANGELOG.md
                     COPYING
                     README.md
cabal-version:       >=1.10

source-repository head
  type:                darcs
  location:            https://dev.angeley.es/s/fr33domlover/r/yesod-http-signature

library
  exposed-modules:     Yesod.HttpSignature
  build-depends:       base
                     , bytestring
                     , case-insensitive
                     , http-signature
                     , http-types
                     , monad-logger
                     , text
                     , time
                     , wai
                     , yesod-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  main-is:             Test.hs
  build-depends:       base
                     , cryptonite
                     , http-client
                     , http-client-signature
                     , http-signature
                     , http-types
                     , memory
                     , network-uri
                     , text
                     , time
                     , transformers
                     , yesod-core
                     , yesod-http-signature
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
