name:                yesod-mail-send
version:             0.1
synopsis:            Send email from your Yesod web app
description:
homepage:            https://dev.angeley.es/s/fr33domlover/r/yesod-mail-send
bug-reports:         https://dev.angeley.es/s/fr33domlover/p/vervis/t
license:             PublicDomain
license-file:        COPYING
author:              fr33domlover
maintainer:          fr33domlover@riseup.net
copyright:           ♡ Copying is an act of love. Please copy, reuse and share.
category:            Yesod, Email
build-type:          Simple
extra-source-files:
  AUTHORS.md
  CHANGELOG.md
  COPYING
  README.md
cabal-version:       >=1.10

source-repository head
  type:                darcs
  location:            https://dev.angeley.es/s/fr33domlover/r/yesod-mail-send

library
  exposed-modules:     Yesod.Mail.Send
  build-depends:       aeson
                     , base
                     , email-validate
                     , mime-mail
                     , network
                     , monad-logger
                     , shakespeare
                     , smtp-mail
                     , text
                     , yesod-core
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
